# yogi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  yogi-stream.cast
.claude/: settings.json
.claude/scripts/: check.sh  verify.sh
crates/being-ascii/: Cargo.toml
crates/being-ascii/src/: lib.rs
crates/being-bench/: Cargo.toml
crates/being-bench/src/: lib.rs
crates/being-bench/tests/: m6_acceptance.rs  m6_recombination.rs
crates/being-bin/: Cargo.toml
crates/being-bin/src/: main.rs
crates/being-colony/: Cargo.toml
crates/being-colony/src/: lib.rs
crates/being-core-economy/: Cargo.toml
crates/being-core-economy/src/: lib.rs
crates/being-core-id/: Cargo.toml
crates/being-core-id/src/: lib.rs
crates/being-core-journal/: Cargo.toml
crates/being-core-journal/src/: lib.rs
crates/being-core-memory/: Cargo.toml
crates/being-core-memory/src/: lib.rs
crates/being-core-mutation/: Cargo.toml
crates/being-core-mutation/src/: lib.rs
crates/being-core-policy/: Cargo.toml
crates/being-core-policy/src/: lib.rs
crates/being-core-types/: Cargo.toml
crates/being-core-types/src/: lib.rs
crates/being-distill/: Cargo.toml
crates/being-distill/src/: lib.rs
crates/being-embed-openai/: Cargo.toml
crates/being-embed-openai/src/: lib.rs
crates/being-goals/: Cargo.toml
crates/being-goals/src/: cipher.rs  lib.rs  op.rs  tautogram.rs
crates/being-lineage/: Cargo.toml
crates/being-lineage/src/: colony.rs  evolve.rs  fork_saga.rs  lib.rs  recombine.rs
crates/being-loop/: Cargo.toml
crates/being-loop/src/: lib.rs
crates/being-metacog/: Cargo.toml
crates/being-metacog/src/: lib.rs
crates/being-persist/: Cargo.toml
crates/being-persist/src/: lib.rs
crates/being-proposer-openai/: Cargo.toml
crates/being-proposer-openai/src/: lib.rs
crates/being-router/: Cargo.toml
crates/being-router/src/: lib.rs
crates/being-runtime/: Cargo.toml
crates/being-runtime/src/: lib.rs  step_machine.rs
crates/being-sandbox/: Cargo.toml
crates/being-sandbox-wasm/: Cargo.toml  guest.wasm
crates/being-sandbox-wasm/src/: lib.rs
crates/being-sandbox/src/: lib.rs
crates/being-supervisor/: Cargo.toml
crates/being-supervisor/src/: lib.rs
crates/being-tautogram/: Cargo.toml
crates/being-value/: Cargo.toml
crates/being-value/src/: lib.rs
docs/: FINDINGS.md  HANDOVER.md  LOOP_DIRECTIVES.md  MILESTONES.md  SYNTHESIS.md  architecture-annotated.md  architecture.md  build-spec.md  decisions.md  evolution-and-safety.md  experiment-tldr.md  local-model-eval-report.md  local-vs-frontier-guide.md
docs/paper/: draft.md  local-model-laws.md  phase-diagram.md  safety-redteam.md  safety-theorem.md  skeleton.md
docs/paper/figures/: f6-moonshot-renders.txt  headroom-law.txt  reachable-vs-raw.txt
docs/paper/runs/: INDEX.md
docs/plan/: democratization-roadmap.md
docs/research/: democratizing-intelligence.md  floor-crossing-ratchet.md  recursive-invention.md  self-factorized-curriculum.md  structural-containment.md
guest/being-guest-wasm/: Cargo.toml
guest/being-guest-wasm/src/: lib.rs
scripts/: agentic_distill.sh  agentic_rich.sh  agentic_sql.sh  ascii_moonshot.sh  bestofn.sh  build_guest_wasm.sh  combine_levers.sh  crosstask_decompose.sh  crosstask_generalize.sh  crosstask_humaneval.sh  crosstask_sweep.sh  decompose_ascii.sh  difficulty_strat.sh  disambig_test.sh  distill_lora.sh  feedback_ablation.sh  floor_crossing.sh  floor_crossing_suite.sh  frontier_baseline.sh  frontier_views.sh  graduation_curve.sh  invent.sh  invent_v2.sh  local_tier.sh  mbpp_anchor.sh  mbpp_rounds.sh  mlx_fast.py  multi_round.sh  op_ratchet.sh  passk.sh  passk_ascii.sh  passk_code.sh  passk_reachable.sh  recover_stats.sh  recurse.sh  recurse_v2.sh  recurse_v3.sh  retry_ascii.sh  rlvr_ascii.sh  rlvr_lite.sh  (+31 more)
