[package]
name = "being-ascii"
version.workspace = true
edition.workspace = true
license.workspace = true

# The NLP->ASCII domain: the survival-wired goal Yogi evolves toward. Structural (anti-Goodhart) grader,
# subject x style niche (QDAIF-style), pluggable Generator/QualityJudge (model + LLM-judge plug in
# foreground; structural stand-ins keep this crate pure + loop-safe), and an Evaluator wired to
# being-lineage::illuminate. No model, no cloud in this crate.
[dependencies]
being-core-mutation = { path = "../being-core-mutation" }
being-lineage = { path = "../being-lineage" }
# Local ASCII drawer: reuse the tested Ollama client. The model call is FOREGROUND-only; tests use the
# stub generator, so the green-gate never loads a model.
being-proposer-openai = { path = "../being-proposer-openai" }
being-runtime = { path = "../being-runtime" }

# Live ASCII evolution (foreground): qwen draws, Claude (`claude -p`) judges, illuminate evolves.
[[bin]]
name = "ascii_evolve"
path = "src/bin/ascii_evolve.rs"
