[package]
name = "being-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

# The `bench` binary loads the model when RUN (foreground only). Building/clippy never runs it; the
# library half (scoring, bootstrap CI, anti-theater) is pure and used by the automated loop's tests.
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

# Day-0 vs Day-N compounding demo (loads qwen3:8b + nomic-embed-text). Foreground only.
[[bin]]
name = "compound"
path = "src/bin/compound.rs"

# Bounded self-modification demo (loads qwen3:8b repeatedly). Foreground only.
[[bin]]
name = "selfimprove"
path = "src/bin/selfimprove.rs"

# Transfer-compounding certification (made-up operation; loads qwen3:8b + nomic). Foreground only.
[[bin]]
name = "transfer"
path = "src/bin/transfer.rs"

# End-to-end transfer cert through the full being (hybrid retrieval + thinking). Foreground only.
[[bin]]
name = "transfer_e2e"
path = "src/bin/transfer_e2e.rs"

[dependencies]
being-runtime = { path = "../being-runtime" }
being-proposer-openai = { path = "../being-proposer-openai" }
being-embed-openai = { path = "../being-embed-openai" }
being-supervisor = { path = "../being-supervisor" }
being-core-economy = { path = "../being-core-economy" }
being-core-mutation = { path = "../being-core-mutation" }
being-loop = { path = "../being-loop" }
