[package]
name = "being-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

# The `bench` binary loads the model when RUN (foreground only). Building/clippy never runs it; the
# library half (scoring, bootstrap CI, anti-theater) is pure and used by the automated loop's tests.
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

# Day-0 vs Day-N compounding demo (loads qwen3:8b + nomic-embed-text). Foreground only.
[[bin]]
name = "compound"
path = "src/bin/compound.rs"

# Bounded self-modification demo (loads qwen3:8b repeatedly). Foreground only.
[[bin]]
name = "selfimprove"
path = "src/bin/selfimprove.rs"

# Transfer-compounding certification (made-up operation; loads qwen3:8b + nomic). Foreground only.
[[bin]]
name = "transfer"
path = "src/bin/transfer.rs"

# End-to-end transfer cert through the full being (hybrid retrieval + thinking). Foreground only.
[[bin]]
name = "transfer_e2e"
path = "src/bin/transfer_e2e.rs"

# Multi-skill + compositional transfer cert (3 learned skills; loads qwen3:8b + nomic). Foreground only.
[[bin]]
name = "multi_skill"
path = "src/bin/multi_skill.rs"

# M6 MAP-Elites illumination over genomes, scored by the real bench + model. Foreground only.
[[bin]]
name = "evolve"
path = "src/bin/evolve.rs"

# M6 open-ended search on the transfer corpus (rule-carrying genomes; real behavioral diversity).
[[bin]]
name = "evolve_transfer"
path = "src/bin/evolve_transfer.rs"

# M3 gap detection: which tasks the teacher (thinking) solves but the student (no-think) fails.
[[bin]]
name = "distill"
path = "src/bin/distill.rs"

[dependencies]
being-runtime = { path = "../being-runtime" }
being-proposer-openai = { path = "../being-proposer-openai" }
being-embed-openai = { path = "../being-embed-openai" }
being-supervisor = { path = "../being-supervisor" }
being-core-economy = { path = "../being-core-economy" }
being-core-mutation = { path = "../being-core-mutation" }
being-loop = { path = "../being-loop" }
# The MAP-Elites engine + drift gate input. Used by the `evolve` bin and the m6_acceptance test.
being-lineage = { path = "../being-lineage" }
# Ed25519 signer for the Colony's signed fork ledger (evolve bin).
being-core-id = { path = "../being-core-id" }
# M3 gap detection / promotion gate (distill bin).
being-distill = { path = "../being-distill" }
