[package]
name = "being-colony"
version.workspace = true
edition.workspace = true
license.workspace = true

# M6 runtime/persistence integration: composes the pure heredity layer (being-lineage) with durable
# storage (being-persist) so fork commits survive a crash/restart — keeps being-lineage itself pure
# (no I/O). No model; loop-safe.
[dependencies]
being-lineage = { path = "../being-lineage" }
being-persist = { path = "../being-persist" }
being-core-types = { path = "../being-core-types" }

[dev-dependencies]
being-core-id = { path = "../being-core-id" }
being-core-mutation = { path = "../being-core-mutation" }
