[package]
name = "being-embed-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Off by default: the live test reaches the backend and loads the embedding model. Foreground only:
#   cargo test -p being-embed-openai --features live-model
live-model = []

[dependencies]
being-core-memory = { path = "../being-core-memory" }
serde_json = "1"
ureq = "2"
