[package]
name = "being-goals"
version.workspace = true
edition.workspace = true
license.workspace = true

# A FREE-verifier goal for the democratization ratchet (docs/plan P1): write a K-word sentence where
# every word starts with a given letter. The verifier is pure + deterministic + Goodhart-resistant —
# no frontier judge, no salary — so the self-distillation ratchet can be tested with zero cloud cost.
# The lib is model-free (green-gate safe); the model runs live only in foreground bins.
[dependencies]

# Dependencies for the foreground awareness/ratchet bins (model + metacog wiring). Lib stays pure.
being-metacog = { path = "../being-metacog" }
being-proposer-openai = { path = "../being-proposer-openai" }
being-runtime = { path = "../being-runtime" }

# AWARENESS: probe the real agent's capability frontier (verifier-grounded) → what to practice.
[[bin]]
name = "metacog_assess"
path = "src/bin/metacog_assess.rs"
