[package]
name = "being-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
being-core-types = { path = "../being-core-types" }
being-core-id = { path = "../being-core-id" }
being-core-journal = { path = "../being-core-journal" }
being-core-memory = { path = "../being-core-memory" }
being-core-economy = { path = "../being-core-economy" }
being-supervisor = { path = "../being-supervisor" }
