[package]
name = "being-value"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
being-core-types = { path = "../being-core-types" }
# M5 earn-wiring: verified payer revenue credits the being's metabolic account.
being-core-economy = { path = "../being-core-economy" }
